--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Andrew Lin's CS 184 Page</title>
+    <title>Andrew Lin</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
@@ -34,17 +34,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="https://inst.eecs.berkeley.edu/~cs184/fa14/">CS 184</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="./about.html">About</a></li>
-            <li><a href="./as0.html">Assignment 0</a></li>
-            <li><a href="./as1.html">Assignment 1</a></li>
-            <li><a href="./as2.html">Assignment 2</a></li>
-            <li><a href="./as3.html">Assignment 3</a></li>
-            <li><a href="./as4.html">Assignment 4</a></li>
+
 
 
           </ul>
@@ -55,7 +50,7 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Andrew Lin - CS184-bj</h1>
+        <h1>Andrew Lin</h1>
         <p class="lead">andrewhlin @ berk </p>
       </div>
       <img src="./assets/img/bio-pic.jpg" alt="Me" width="300">
