more relevant text and centered image

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
       <div class="starter-template">
         <h1>Andrew Lin</h1>
         <p class="lead">andrewhlin @ berk </p>
+        <p> There isn't much here yet. Some of my projects will eventually be added here, so check back.
       </div>
-      <img src="./assets/img/bio-pic.jpg" alt="Me" width="300">
+      <img src="./assets/img/bio-pic.jpg" alt="Me" width="300" align="middle">
 
     </div><!-- /.container -->
 
