--- a/about.html
+++ b/about.html
@@ -35,17 +35,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="https://inst.eecs.berkeley.edu/~cs184/fa14/"> CS 184</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="./index.html">Home</a></li>
             <li class="active"><a href="#">About</a></li>
-            <li><a href="./as0.html">Assignment 0</a></li>
-            <li><a href="./as1.html">Assignment 1</a></li>
-            <li><a href="./as2.html">Assignment 2</a></li>
-            <li><a href="./as3.html">Assignment 3</a></li>
-            <li><a href="./as4.html">Assignment 4</a></li>
 
           </ul>
         </div><!--/.nav-collapse -->
@@ -59,7 +53,7 @@
           <p class=""> I am a sophomore Computer Science major in the College of Letters and Science, hailing from Naperville, Illinois. </p>
           <p> Besides computer science, I also captain Cal's Club Ultimate Team, UGMO. I've been playing ultimate for almost 7 years now, through all of high school. Besides these commitments, I'm also an avid gamer; while I claim no incredible level of skill, I enjoy RTS games such as Sins of a Solar Empire, Starcraft II, and Planetary Annihilation. </p>
       </div>
-      <img src="./assets/img/Frisbee.jpg" alt="Me" width="400">
+      <img src="./assets/img/Frisbee.jpg" alt="Me" width="400" align="middle">
 
     </div><!-- /.container -->
 
